# Generated by Django 5.2.2 on 2025-06-07 09:54

import django.db.models.deletion
from decimal import Decimal
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('hopdong', '0001_initial'),
        ('sanpham', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='BangPhiCoi',
            fields=[
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Ngày tạo')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Ngày cập nhật')),
                ('is_active', models.BooleanField(default=True, verbose_name='Kích hoạt')),
                ('ma_phi_coi', models.CharField(max_length=20, primary_key=True, serialize=False, unique=True, verbose_name='Mã phí coi')),
                ('tuoi_tu', models.IntegerField(verbose_name='Tuổi từ')),
                ('tuoi_den', models.IntegerField(verbose_name='Tuổi đến')),
                ('menh_gia_tu', models.DecimalField(decimal_places=2, max_digits=15, verbose_name='Mệnh giá từ')),
                ('menh_gia_den', models.DecimalField(decimal_places=2, max_digits=15, verbose_name='Mệnh giá đến')),
                ('ty_le_phi', models.DecimalField(decimal_places=6, max_digits=8, verbose_name='Tỷ lệ phí (%)')),
                ('phi_co_dinh', models.DecimalField(decimal_places=2, default=Decimal('0'), max_digits=12, verbose_name='Phí cố định')),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='%(class)s_created', to=settings.AUTH_USER_MODEL, verbose_name='Người tạo')),
                ('san_pham', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='bang_phi_coi', to='sanpham.sanpham', verbose_name='Sản phẩm')),
                ('updated_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='%(class)s_updated', to=settings.AUTH_USER_MODEL, verbose_name='Người cập nhật')),
            ],
            options={
                'verbose_name': 'Bảng phí coi',
                'verbose_name_plural': 'Bảng phí coi',
                'db_table': 'bang_phi_coi',
            },
        ),
        migrations.CreateModel(
            name='PhiQuanLy',
            fields=[
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Ngày tạo')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Ngày cập nhật')),
                ('is_active', models.BooleanField(default=True, verbose_name='Kích hoạt')),
                ('ma_phi_ql', models.CharField(max_length=20, primary_key=True, serialize=False, unique=True, verbose_name='Mã phí quản lý')),
                ('ty_le_phi_quan_ly', models.DecimalField(decimal_places=4, max_digits=5, verbose_name='Tỷ lệ phí quản lý (%)')),
                ('phi_quan_ly_toi_thieu', models.DecimalField(decimal_places=2, default=Decimal('0'), max_digits=12, verbose_name='Phí quản lý tối thiểu')),
                ('phi_quan_ly_toi_da', models.DecimalField(blank=True, decimal_places=2, max_digits=12, null=True, verbose_name='Phí quản lý tối đa')),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='%(class)s_created', to=settings.AUTH_USER_MODEL, verbose_name='Người tạo')),
                ('san_pham', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='phi_quan_ly', to='sanpham.sanpham', verbose_name='Sản phẩm')),
                ('updated_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='%(class)s_updated', to=settings.AUTH_USER_MODEL, verbose_name='Người cập nhật')),
            ],
            options={
                'verbose_name': 'Phí quản lý',
                'verbose_name_plural': 'Phí quản lý',
                'db_table': 'phi_quan_ly',
            },
        ),
        migrations.CreateModel(
            name='PhiThanhToan',
            fields=[
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Ngày tạo')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Ngày cập nhật')),
                ('is_active', models.BooleanField(default=True, verbose_name='Kích hoạt')),
                ('ma_phi_tt', models.CharField(max_length=20, primary_key=True, serialize=False, unique=True, verbose_name='Mã phí thanh toán')),
                ('thang_nam', models.DateField(verbose_name='Tháng năm áp dụng')),
                ('phi_bao_hiem', models.DecimalField(decimal_places=2, max_digits=12, verbose_name='Phí bảo hiểm')),
                ('phi_quan_ly', models.DecimalField(decimal_places=2, default=Decimal('0'), max_digits=12, verbose_name='Phí quản lý')),
                ('phi_coi', models.DecimalField(decimal_places=2, default=Decimal('0'), max_digits=12, verbose_name='Phí coi')),
                ('tong_phi', models.DecimalField(decimal_places=2, max_digits=12, verbose_name='Tổng phí')),
                ('ngay_dao_han', models.DateField(verbose_name='Ngày đảo hạn')),
                ('da_thanh_toan', models.BooleanField(default=False, verbose_name='Đã thanh toán')),
                ('ngay_thanh_toan', models.DateField(blank=True, null=True, verbose_name='Ngày thanh toán')),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='%(class)s_created', to=settings.AUTH_USER_MODEL, verbose_name='Người tạo')),
                ('hop_dong', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='phi_thanh_toan_list', to='hopdong.hopdong', verbose_name='Hợp đồng')),
                ('updated_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='%(class)s_updated', to=settings.AUTH_USER_MODEL, verbose_name='Người cập nhật')),
            ],
            options={
                'verbose_name': 'Phí thanh toán',
                'verbose_name_plural': 'Phí thanh toán',
                'db_table': 'phi_thanh_toan',
                'ordering': ['-thang_nam'],
                'unique_together': {('hop_dong', 'thang_nam')},
            },
        ),
    ]
